--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0idhs5mynMROTMzFYv1v9_q_xm774CJhswQ&usqp=CAU" />
+      href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samim Trevels</title>
+    <title>2Wards</title>
   </head>
   <body>
     <div id="root"></div>
